# pyclustertend

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: cicd.yml  python-publish.yml  python-tests.yml
PyClusterTend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  index.rst  pyclustertend.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  pyclustertend.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pyclustertend.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pyclustertend/: hopkins.html  metric.html  vat.html
docs/_build/html/_sources/: pyclustertend.rst.txt
docs/source/: about.rst  conf.py  index.rst  pyclustertend.metrics.rst  pyclustertend.rst  pyclustertend.visuals.rst
pyclustertend/: VAT.py  __init__.py  hopkins.ipynb  hopkins.py  metric.py  metrics.py  vat.py  version.py  visual_assessment_of_tendency.py
pyclustertend/.ipynb_checkpoints/: hopkins-checkpoint.ipynb
pyclustertend/metrics/: __init__.py  hopkins.py  metrics.py
pyclustertend/visuals/: VAT.py  __init__.py
src/: VAT.py  hopkins.py
tests/: hokins_test.py  hopkins_test.py  metrics_test.py  test_hopkins.py  test_metric.py  test_visual_assessment_of_tendency.py
tests/data/: iris_ivat.npy  iris_vat.npy
