[tool.poetry]
name = "pyclustertend"
version = "1.6.0"
description = "A package to assess cluster tendency for unsupervised learning"
authors = ["Ismaïl Lachheb"]
license="BSD-3-Clause"
readme="README.md"
documentation="https://pyclustertend.readthedocs.io/en/master/"
exclude = ["tests/"]
repository = "https://github.com/lachhebo/pyclustertend"
keywords = ["cluster tendency", "clustering", "machine learning", "hopkins", "VAT"]


[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.0"
matplotlib = "^3.3.3"
numpy = "^1.19.1"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
coverage = "^5.4"
codecov = "^2.1.11"
pytest-cov = "^2.11.1"
black = "^21.6b0"

