[tool.poetry]
name = "pyclustertend"
version = "1.8.0"
description = "A package to assess cluster tendency for unsupervised learning"
authors = ["Ismaïl Lachheb"]
license="BSD-3-Clause"
readme="README.md"
documentation="https://pyclustertend.readthedocs.io/en/master/"
exclude = ["tests/"]
repository = "https://github.com/lachhebo/pyclustertend"
keywords = ["cluster tendency", "clustering", "machine learning", "hopkins", "VAT"]


[tool.poetry.dependencies]
python = "^3.8, <3.10"
scikit-learn = "^1.1.2"
matplotlib = "^3.3.3"
numpy = "1.20.3"
pandas = "^1.2.0"
numba = "^0.54.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
coverage = "^5.4"
codecov = "^2.1.11"
pytest-cov = "^2.11.1"

